# pair

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  TO-DO.md  ci.sh
.github/workflows/: ci.yaml
src/: as_ref.rs  deref.rs  drop_guard.rs  lib.rs  owner.rs  pair.rs  panicking.rs  ref_owner.rs
src/convenience/: as_ref.rs  borrow.rs  deref.rs  mod.rs  ref_owner.rs
tests/: alternative_ctors.rs  basic_usage.rs  compile_fails.rs  concurrent_loom.rs  concurrent_std.rs  contravariance.rs  debug.rs  default.rs  drop.rs  dyn_trait_owner.rs  interior_mutability.rs  multiborrow.rs  nested_pair.rs  panic_safety.rs  tmp.rs  to-do.md  trybuild_test.rs  unsized_owner.rs  zst.rs
tests/compile_fails/: extract_with_dep_mut.expected  extract_with_dep_mut.rs  invariant_dep_extraction.expected  invariant_dep_extraction.rs  keep_dep_after_into_owner.expected  keep_dep_after_into_owner.rs  keep_dep_after_pair_drop.expected  keep_dep_after_pair_drop.rs  not_send_dep.expected  not_send_dep.rs  not_send_owner.expected  not_send_owner.rs  not_sync_dep.expected  not_sync_dep.rs  not_sync_owner.expected  not_sync_owner.rs  pair_not_covariant.expected  pair_not_covariant.rs  send_sync_miserable_failure.expected  send_sync_miserable_failure.rs
tests/trybuild_fails/: contravariance_violation.rs  contravariance_violation.stderr  extract_with_dep_mut.rs  extract_with_dep_mut.stderr  invariant_dep_extraction.rs  invariant_dep_extraction.stderr  keep_dep_after_into_owner.rs  keep_dep_after_into_owner.stderr  keep_dep_after_pair_drop.rs  keep_dep_after_pair_drop.stderr  not_send_dep.rs  not_send_dep.stderr  not_send_owner.rs  not_send_owner.stderr  not_sync_dep.rs  not_sync_dep.stderr  not_sync_owner.rs  not_sync_owner.stderr  pair_not_covariant.rs  pair_not_covariant.stderr  send_sync_miserable_failure.rs  send_sync_miserable_failure.stderr
